@@ -86,7 +86,7 @@ spritefile idx output
 spritefile output_directory
 
 .Sh OPTIONS
-.Bl -tag -width "-openrct-data-path path "
+.Bl -tag -width "-openrct2-data-path path "
 
 .It Fl h | -help
 Print a summary of all options to stdout and exit.
@@ -122,7 +122,7 @@ Password needed to join the server.
 Path to the user data directory (containing
 .Pa config.ini )
 
-.It Fl -openrct-data-path Ar path
+.It Fl -openrct2-data-path Ar path
 Path to the OpenRCT2 data directory (containing
 .Pa languages )
 
