@@ -139,7 +139,7 @@ uint8_t platform_get_locale_measurement_format()
 
 void platform_get_changelog_path(utf8* outPath, size_t outSize)
 {
-    platform_get_openrct_data_path(outPath, outSize);
+    platform_get_openrct2_data_path(outPath, outSize);
     safe_strcat_path(outPath, "changelog.txt", outSize);
 }
 
